# phoenix-nft-marketplace

./: Cargo.toml  Makefile
.github/workflows/: basic.yml  codecov.yml  release.yml
contracts/auctions/: Cargo.toml
contracts/auctions/src/: contract.rs  error.rs  lib.rs  storage.rs  test.rs  utils.rs
contracts/auctions/src/test/: bids.rs  finalize_auction.rs  initialization.rs  setup.rs
contracts/collections/: Cargo.toml  README.md
contracts/collections/src/: contract.rs  error.rs  lib.rs  storage.rs
contracts/collections/src/test/: setup.rs  tests.rs
contracts/collections/src/tests/: setup.rs  tests.rs
contracts/deployer/: Cargo.toml  Makefile  README.md
contracts/deployer/src/: lib.rs  tests.rs
contracts/nft/src/: admin.rs  approval.rs  balance.rs  contract.rs  interface.rs  lib.rs  storage_types.rs
contracts/token/src/: contract.rs
scripts/: deploy.sh
