[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/Phoenix-Protocol-Group/phoenix-nft-marketplace"

[workspace.dependencies]
ed25519-dalek = "1.0.1"
num-integer = { version = "0.1.45", default-features = false, features = [
    "i128",
] }
soroban-sdk = "22.0.4"
soroban-token-sdk = "22.0.4"
test-case = "3.3"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
