[package]
name = "phoenix-nft-collections"
version = { workspace = true }
authors = ["Jakub <jakub@moonbite.space>"]
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
test-case = "3.3.1"
